--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -7,3 +7,9 @@
 <p class="post-meta-description">{{ post.description }}</p>
 {%- endif -%}
 <p class="post-meta">{{ post.date | date: date_format }}</p>
+
+<h3>
+    <a class="post-link" href="{{ 'path/to/binaryCalculator.js' | relative_url }}">
+        Binary Calculator JavaScript File
+    </a>
+</h3>
